# dsa-data-analysis

./: .gitignore
data-lander/: .dockerignore  Cargo.toml  Dockerfile  main.py  readme.md  requirements.txt  rust-toolchain.toml
data-lander-backfill/: data-lander-backfill-orchestrator.py  manifest.json
data-lander-backfill/src/: main.py
data-lander-ecs/src/: downloader.py  main.py  utils.py
data-lander-py/: Dockerfile  readme.md  requirements.txt
data-lander-py/src/: main.py  processor.py
data-lander-python/: Dockerfile  requirements.txt
data-lander-python/src/: converter_uploader.py  merge_parquets.py  unzipper.py
data-lander/src/: converter_uploader.rs  downloader.rs  main.rs  platform_collector.rs  s3_handler.rs  unzipper.rs  utils.py  utils.rs
data-size-calculator/: readme.md
dsa-cli/: requirements.txt
dsa-cli/src/: main.py
dsa-cli/src/commands/: lander.py
dsa-cli/src/s3/: date_util.py
dsa-cli/src/utils/: date_parser.py  dsa_url_generator.py
review-tracker-lambda/: readme.md
table-scraper/: go.mod  readme.md
table-scraper/data/output/: dsa_data_export_2025-08-19_18-48-44.json  dsa_data_export_2025-08-19_19-18-27.json  dsa_data_export_2025-08-19_20-39-55.json  dsa_data_export_2025-08-19_21-18-08.json  dsa_data_export_2025-08-19_21-35-56.json
table-scraper/pkg/: main.go
table-scraper/src/: main.go  model.go  pricing.go  scraper.go  summaries.go
