[package]
name = "data-lander"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.23"
tempfile = "3.21.0"
tracing = "0.1.41"
futures-async-stream = "0.2.12"
futures-util = { version = "0.3.31", features = ["sink"] }
parquet = "56.0.0"
polars = { version = "0.49.1", features = ["parquet", "csv", "json", "lazy",  "strings", "is_in", "csv"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.103.0", features = ["behavior-version-latest"] }
tokio = { version = "1.47.1", features = ["full"] }
bytes = "1.x" 
path-slash = "0.2"
regex = "1.11.1"
zip = "4.3.0"
dotenvy = "0.15.7"
log = "0.4.27"